--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,11 @@
   </head>
 
   <body>
-    <%= render 'header' %>
+    <%= render 'layouts/header' %>
       <main>
         <p id="notice"><%= notice %></p>
         <%= yield %>
       </main>
-    <%= render 'footer' %>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
