--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,29 +1,52 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto mt-2">
+      <h2>新規登録</h2>
+      <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
+        <%= render "users/shared/error_messages", resource: resource %>
+        <div class="field">
+          <%= f.label :name, "名前" %><br/>
+          <%= f.text_field :name, size: 30 %>
+        </div>
+        <div class="field">
+          <%= f.label :email, "メールアドレス" %><br/>
+          <%= f.email_field :email, size: 30 %>
+        </div>
+        <div class="field">
+          <%= f.label "募集対象" %><br/>
+          <%= f.radio_button :target, 'true' %>
+          <%= f.label :target, 'リーダー', value: true %>
+          <%= f.radio_button :target, 'false' %>
+          <%= f.label :target, 'パートナー', value: false %>
+        </div>
+        <div class="field">
+          <%= f.label "プロ/アマ" %><br/>
+          <%= f.radio_button :status, 'アマチュア' %>
+          <%= f.label :status, 'アマチュア', value: "アマチュア" %>
+          <%= f.radio_button :status, 'プロ' %>
+          <%= f.label :status, 'プロ', value: "プロ" %>
+        </div>
+        <div class="field">
+          <%= f.label :area, "地域" %><br/>
+          <%= f.select :area, User.areas.keys, {} %>
+        </div>
+        <div class="field">
+          <%= f.label :password, "パスワード" %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %>文字以上)</em>
+          <% end %><br/>
+          <%= f.password_field :password, size: 30, autocomplete: "new-password" %>
+        </div>
+        <div class="field">
+          <%= f.label :password_confirmation, "パスワード(確認用)" %><br/>
+          <%= f.password_field :password_confirmation, size: 30, autocomplete: "new-password" %>
+        </div>
+        <div class="actions">
+          <%= f.submit "新規登録", class: "btn btn-success" %>
+        </div>
+      <% end %>
+      <p class="mt-5"><span style="background-color:#fc9">既に登録済みの方</span></p>
+      <p><%= link_to "こちら", new_user_session_path %> からログインしてください。</p>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+</div>
