--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+@import "bootstrap";
+
+.field {
+  margin-bottom: 13px;
+}
+
+.field label{
+  font-weight: 700;
+  font-size: 15px;
+  padding-left: 2px;
+}
