--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,7 @@
          <li class="nav-item"><%= link_to "ログアウト", destroy_admin_session_path, class: "btn btn-light", method: :delete %></li>
         <% elsif user_signed_in? %>
          <li class="nav-item"><%= link_to "マイページ", user_path(current_user), class: "btn btn-light" %></li>
+         <li class="nav-item"><%= link_to "募集一覧", posts_path, class: "btn btn-light" %></li>
          <li class="nav-item"><%= link_to "ログアウト", destroy_user_session_path, class: "btn btn-light", method: :delete %></li>
         <% else %>
          <li class="nav-item"><%= link_to "About", homes_about_path, class: "btn btn-light" %></li>
