--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,7 +1,44 @@
 <div class="container">
   <div class="row">
     <div class="col-6 mx-auto">
-      <h2>プロフィール編集</h2>
+      <h2>募集要項編集</h2>
+      <%= form_with model: @post, local: true do |f| %>
+        <div class="field">
+          <%= f.label :status, "プロ・アマ希望" %><br/>
+          <%= f.select :status, Post.statuses.keys.to_a, include_blank: "選択して下さい" %>
+        </div>
+        <div class="field">
+          <%= f.label :directionality, "希望種目" %><br/>
+          <%= f.select :directionality, Post.directionalities.keys.to_a, include_blank: "選択して下さい" %>
+        </div>
+        <div class="field">
+          <%= f.label "希望年齢" %><br/>
+          <%= f.number_field :min_age, min: 0, max: 100 %>歳~<%= f.number_field :max_age, min: 0, max: 100 %>歳
+        </div>
+        <div class="field">
+          <%= f.label "希望身長" %><br/>
+          <%= f.number_field :min_height, min: 100, max: 200 %>cm~<%= f.number_field :max_height, min: 100, max: 200 %>cm
+        </div>
+        <div class="field">
+          <%= f.label :experience, "希望社交ダンス歴" %><br/>
+          <%= f.select :experience, Post.experiences.keys.to_a, include_blank: "選択して下さい" %>
+        </div>
+        <div class="field">
+          <%= f.label :place, "希望練習場所" %><br/>
+          <%= f.text_field :place, size: 30 %>
+        </div>
+        <div class="field">
+          <%= f.label :frequency, "希望練習頻度" %><br/>
+          <%= f.text_field :frequency, size: 30 %>
+        </div>
+        <div class="field">
+          <%= f.label :comment, "募集コメント" %><br/>
+          <%= f.text_area :comment, size: "30x3" %>
+        </div>
+        <div class="actions">
+          <%= f.submit "更新する", class: "btn btn-success" %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
