--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-2"></div>
     <div class="col-8">
-      
+      <h2>募集一覧</h2>
     </div>
   </div>
 </div>
