[Add]いいね機能

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,48 @@
 <div class="contianer">
   <div class="row">
-    <div class="col-2"></div>
-    <div class="col-8">
+    <div class="col-7 mx-auto">
       <h2>募集一覧</h2>
+      <% @posts.zip(@users) do |post, user| %>
+        <table class="table mt-5">
+          <tr>
+            <th>【<%= user.area %>】</th>
+            <td>
+              <% if user.target == true %>
+                <%= post.status %>リーダー募集
+              <% else %>
+                <%= post.status %>パートナー募集
+              <% end %>
+            </td>
+          </tr>
+          <tr>
+            <th>投稿者</th>
+            <td><%= link_to user.name, user_path(user) %>(<%= user.status %>)</td>
+          </tr>
+          <tr>
+            <th>募集コメント</th>
+            <td><%= post.comment %></td>
+          </tr>
+          <tr>
+            <th>希望種目</th>
+            <td><%= post.directionality %></td>
+          </tr>
+          <tr>
+            <th>希望練習場所</th>
+            <td><%= post.place %></td>
+          </tr>
+          <tr>
+            <th>希望練習頻度</th>
+            <td><%= post.frequency %></td>
+          </tr>
+        </table>
+        <%= link_to "詳細を見る", post_path(post), class: "btn btn-success" %>
+        <% if post.favorited_by?(current_user) %>
+          <%= link_to "気になる解除", post_favorites_path(post), class: "btn btn-danger", method: :delete %>
+        <% else %>
+          <%= link_to "気になる", post_favorites_path(post), class: "btn btn-info", method: :post %>
+        <% end %>
+      <% end %>
+      <%= paginate @posts %>
     </div>
   </div>
 </div>
