--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -50,7 +50,7 @@
       <% if Post.where(user_id: @user.id).exists? %>
         <%= link_to "自分の募集要項を見る", post_path(@user), class: "btn btn-success" %>
       <% else %>
-        <%= link_to "募集要項を作成する", new_post_path, class: "btn btn-prima" %>
+        <%= link_to "募集要項を作成する", new_post_path, class: "btn btn-primary" %>
       <% end %>
     </div>
   </div>
