--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -40,10 +40,12 @@
           <td><%= @post.comment %></td>
         </tr>
       </table>
-      <% if @post.user_id = current_user.id %>
+      <% if @post.user_id == current_user.id %>
         <%= link_to "募集要項編集", edit_post_path(@post), class: "btn btn-success" %>
+      <% else %>
+        <%= link_to "メッセージを送る", chat_path(@user), class: "btn btn-primary" %>
       <% end %>
-      <%= link_to "募集一覧へ", posts_path, class: "btn btn-success" %>
+      <%= link_to "募集一覧へ", posts_path, class: "btn btn-info" %>
     </div>
   </div>
 </div>
