--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,11 +46,13 @@
           <td><%= @user.introduction %></td>
         </tr>
       </table>
-      <%= link_to "プロフィール編集", edit_user_path(@user), class: "btn btn-success" %>
-      <% if Post.where(user_id: @user.id).exists? %>
-        <%= link_to "自分の募集要項を見る", post_path(@user), class: "btn btn-success" %>
-      <% else %>
-        <%= link_to "募集要項を作成する", new_post_path, class: "btn btn-primary" %>
+      <% if @user.id == current_user.id %>
+        <%= link_to "プロフィール編集", edit_user_path(@user), class: "btn btn-success" %>
+        <% if Post.where(user_id: @user.id).exists? %>
+          <%= link_to "自分の募集要項を見る", post_path(@user), class: "btn btn-info" %>
+        <% else %>
+          <%= link_to "募集要項を作成する", new_post_path, class: "btn btn-info" %>
+        <% end %>
       <% end %>
     </div>
   </div>
