--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="bg-light">
-  <div class='container mt-5'>
+  <div class='container'>
     <div class='row'>
-      <div class='mx-auto pt-3 d-flex'>
+      <div class='mx-auto pt-3'>
         <p>&copy; 2021 Shall we dance?</p>
       </div>
     </div>
