--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,14 +46,22 @@
           <td><%= @user.introduction %></td>
         </tr>
       </table>
-      <% if @user.id == current_user.id %>
-        <%= link_to "プロフィール編集", edit_user_path(@user), class: "btn btn-success" %>
-        <% if Post.where(user_id: @user.id).exists? %>
-          <%= link_to "自分の募集要項を見る", post_path(@user), class: "btn btn-info" %>
-        <% else %>
-          <%= link_to "募集要項を作成する", new_post_path, class: "btn btn-info" %>
+    </div>
+    <div class="col-4">
+      <ul class="mt-5">
+        <% if @user.id == current_user.id %>
+          <li><%= link_to "プロフィール編集", edit_user_path(@user) %></li>
+          <li>
+            <% if Post.where(user_id: @user.id).exists? %>
+              <%= link_to "自分の募集要項を見る", post_path(@user) %>
+            <% else %>
+              <%= link_to "募集要項を作成する", new_post_path %>
+            <% end %>
+          </li>
+          <li><%= link_to "気になる一覧", user_favorites_path(@user) %></li>
+          <li>メッセージ通知</li>
         <% end %>
-      <% end %>
+      </ul>
     </div>
   </div>
 </div>
