--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,19 @@
-<div class="contanier" id="top">
+<div id="top">
   <%= render 'layouts/header' %>
   <div class="text-box">
     <p><span class="top-text">誰かと踊るって、楽しい</span></p>
+  </div>
+</div>
+<div id="about">
+  <div class="about-container">
+    <h2 class="about-title">About</h2>
+    <p class="about-text mt-5 mb-5">
+      社交ダンスのリーダー・パートナー募集サイトです。<br/>
+      必要な情報を登録すると簡単に募集要項を書くことができ、気になる相手がいた場合は<br/>
+      その募集要項にいいねができ、相手にメッセージを送ることができます。<br/>
+      また、相手を都道府県や年齢、種目などで絞り込み検索ができ、希望の相手を見つけるお手伝いをします。<br/>
+      リーダー・パートナーが見つからずに踊るのを諦めてしまっていた人が、<br/>
+      このサイトを通じて相手を見つけ、社交ダンスを楽しんでいただけたら幸いです。
+    </p>
   </div>
 </div>
