--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,43 +1,11 @@
+<%= render 'layouts/header' %>
 <div class="contianer">
   <div class="row">
     <div class="col-7 mx-auto">
       <h2>募集一覧</h2>
       <%= link_to "新しい順", posts_path(sort: 'created_at DESC') %> | <%= link_to "古い順", posts_path(sort: 'created_at ASC') %>
       <% @posts.zip(@users) do |post, user| %>
-        <table class="table mt-5">
-          <tr>
-            <th>【<%= user.area %>】</th>
-            <td>
-              <% if user.target == true %>
-                <%= post.status %>リーダー募集
-              <% else %>
-                <%= post.status %>パートナー募集
-              <% end %>
-            </td>
-          </tr>
-          <tr>
-            <th class="post-th">投稿者</th>
-            <td><%= link_to user.name, user_path(user) %>(<%= user.status %>)</td>
-          </tr>
-          <tr>
-            <th>年齢</th>
-            <td><%= user.age %>歳</td>
-          </tr>
-          <tr>
-            <th class="post-th">希望種目</th>
-            <td><%= post.directionality %></td>
-          </tr>
-          <tr>
-            <th class="post-th">希望練習場所</th>
-            <td><%= post.place %></td>
-          </tr>
-          <tr>
-            <th class="post-th">募集コメント</th>
-            <td><%= post.comment %></td>
-          </tr>
-        </table>
-        <%= link_to "詳細を見る", post_path(post), class: "btn btn-success" %></td>
-        <span class="favorite-btn_<%= post.id %>"><%= render 'favorites/favorite-btn', post: post %></span>
+        <%= render "index", post: post, user: user %>
       <% end %>
       <%= paginate @posts %>
     </div>
