--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
          <li class="nav-item"><%= link_to "募集一覧", posts_path, class: "btn btn-light" %></li>
          <li class="nav-item"><%= link_to "ログアウト", destroy_user_session_path, class: "btn btn-light", method: :delete %></li>
         <% else %>
-         <li class="nav-item"><%= link_to "About", homes_about_path, class: "btn btn-light" %></li>
+         <li class="nav-item"><%= link_to "About", root_path(anchor: 'about'), class: "btn btn-light" %></li>
          <li class="nav-item"><%= link_to "募集一覧", posts_path, class: "btn btn-light" %></li>
          <li class="nav-item"><%= link_to "新規登録", new_user_registration_path, class: "btn btn-light", data: {"turbolinks" => false} %></li>
          <li class="nav-item"><%= link_to "ログイン", new_user_session_path, class: "btn btn-light", data: {"turbolinks" => false} %></li>
