--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
+<%= render 'layouts/header' %>
 <div class="container">
   <div class="row">
     <div class="col-6 mx-auto">
@@ -51,6 +52,7 @@
       <% if @post.user_id == current_user.id %>
         <%= link_to "募集要項編集", edit_post_path(@post), class: "btn btn-success" %>
       <% else %>
+        <span class="favorite-btn_<%= @post.id %>"><%= render 'favorites/favorite-btn', post: @post %></span>
         <%= link_to "メッセージを送る", chat_path(@user), class: "btn btn-primary" %>
       <% end %>
       <%= link_to "募集一覧へ", posts_path, class: "btn btn-info" %>
