--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.side_img {
+  background-image: url(pexels-pixabay-67238.jpg);
+  background-size: cover;
+  background-position: center;
+  width: 30%;
+  height: 100vh;
+}
+
+.mypage-title {
+  background-color: #fff;
+  margin-top: 40vh;
+}
+
+.mypage-main {
+  background-color: #ECEFF1;
+}
