--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,7 +3,20 @@
   <div class="row">
     <div class="col-6 mx-auto">
       <h2>プロフィール編集</h2>
+      <% if @user.errors.any? %>
+        <div class="notice">
+          <ul>
+            <% @user.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
       <%= form_with model: @user, local: true do |f| %>
+        <div class="field">
+          <%= f.label "プロフィール画像" %><br/>
+          <%= f.attachment_field :profile_image %>
+        </div>
         <div class="field">
           <%= f.label "募集状況" %><br/>
           <%= f.radio_button :is_active, 'true' %>
