--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,12 @@
 <%= render 'layouts/header' %>
-<div class="container">
-  <div class="row">
-    <div class="col-6 mx-auto">
+<div class="container-fluid">
+  <div class="row mypage-main">
+    <div class="side_img">
+      <h1 class="mypage-title text-center">My Page</h1>
+    </div>
+    <div class="col-5 text-left ml-2 mt-2">
       <table class="table">
-        <tr><%= attachment_image_tag @user, :profile_image, size: "200x200", fallback: "no_image.jpg" %></tr>
+        <tr><%= attachment_image_tag @user, :profile_image, size: "180x180", fallback: "no_image.jpg", style: "border-radius: 50%;" %></tr>
         <tr>
           <th>募集状況</th>
           <td>
@@ -40,19 +43,35 @@
         </tr>
       </table>
     </div>
-    <div class="col-4">
-      <ul class="mt-5">
+    <div>
+      <ul class="mt-5 side_menu">
         <% if @user.id == current_user.id %>
-          <li><%= link_to "プロフィール編集", edit_user_path(@user) %></li>
-          <li>
-            <% if Post.where(user_id: @user.id).exists? %>
-              <%= link_to "自分の募集要項を見る", post_path(@user) %>
-            <% else %>
-              <%= link_to "募集要項を作成する", new_post_path %>
+          <li class="nav-item">
+            <%= link_to edit_user_path(@user), class: "btn" do %>
+              <i class="fas fa-user-edit"></i> プロフィール編集
             <% end %>
           </li>
-          <li><%= link_to "気になる一覧", user_favorites_path(@user) %></li>
-          <li>メッセージ通知</li>
+          <li class="nav-item">
+            <% if Post.where(user_id: @user.id).exists? %>
+              <%= link_to post_path(@user), class: "btn" do %>
+                <i class="fas fa-edit"></i> 自分の募集要項を見る
+              <% end %>
+            <% else %>
+              <%= link_to new_post_path, class: "btn" do %>
+                <i class="fas fa-edit"></i> 募集要項を作成する
+              <% end %>
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to user_favorites_path(@user), class: "btn" do %>
+              <i class="fas fa-heart"></i> 気になる一覧
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to root_path, class: "btn" do %>
+              <i class="fas fa-envelope"></i> メッセージ通知
+            <% end %>
+          </li>
         <% end %>
       </ul>
     </div>
