--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
 
   <body>
     <main>
-      <%= yield %>
+      <%= render 'layouts/header' %>
+        <%= yield %>
       <%= render 'layouts/footer' %>
     </main>
   </body>
