[Update]マイページ

--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -11,7 +11,7 @@
     </tr>
     <tr>
       <th class="post-th">投稿者</th>
-      <td><%= link_to user.name, user_path(user) %>(<%= user.status %>)</td>
+      <td><%= user.name %>(<%= user.status %>)</td>
     </tr>
     <tr>
       <th>年齢</th>
