--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <div class="contianer">
   <div class="row">
-    <div class="col-7 mx-auto">
-      <h2>募集一覧</h2>
+    <div class="col-6 mx-auto mt-3">
+      <h2 class="text-center">募集一覧</h2>
       <%= link_to "新しい順", posts_path(sort: 'new') %> | <%= link_to "古い順", posts_path(sort: 'old') %>
       <% @posts.each do |post| %>
         <%= render "index", post: post, user: post.user %>
