--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -51,7 +51,7 @@
           <%= f.select :experience, User.experiences.keys.to_a, include_blank: "選択して下さい" %>
         </div>
         <div class="field">
-          <%= f.label :introduction, "自己紹介" %><br/>
+          <%= f.label :introduction, "その他(持ち級など)" %><br/>
           <%= f.text_area :introduction, size: "50x5" %>
         </div>
         <div class="actions">
