--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,14 @@
-<div class="container-fluid">
+<div class="container">
   <div class="row mypage-main">
-    <div class="side_img">
-      <h1 class="mypage-title text-center">
+    <div class="mx-auto mt-2">
+      <h1 class="text-center">
         <% if current_user == @user %>
           My Page
         <% else %>
           <%= @user.name %>さんのPage
         <% end %>
       </h1>
-    </div>
-    <div class="col-5 text-left ml-2 mt-2">
-      <table class="table table-bordered">
+      <table class="table">
         <tr><%= attachment_image_tag @user, :profile_image, size: "180x180", fallback: "no_image.jpg", style: "border-radius: 50%;" %></tr>
         <tr>
           <th>募集状況</th>
@@ -43,13 +41,13 @@
           <td><%= @user.experience %>(学連：<%= @user.club_status %>）</td>
         </tr>
         <tr>
-          <th height="150">自己紹介</th>
+          <th>その他(持ち級など)</th>
           <td><%= @user.introduction %></td>
         </tr>
       </table>
     </div>
     <div>
-      <ul class="mt-5 side_menu">
+      <ul class="mt-5 text-left side_menu">
         <% if @user.id == current_user.id %>
           <li class="nav-item">
             <%= link_to edit_user_path(@user), class: "btn" do %>
